[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.2", features = ["headers", "ws"] }
hyper = { version = "0.14.23", features = ["full"] }
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.1", features = ["full"] }
headers = "0.3"
reqwest = {version = "0.11.11", features = [ "json" ]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
